fix scrollbar remaining on screen when unitlist is hidden
git-svn-id: svn://hall.linuxconsulting.ro/websites/linuxconsulting-ro/code-repository/repository/html5-hexgrid@211 ffed5ea4-548f-4068-9d18-8ed96cdef38e

--- a/css/ui-equipment.css
+++ b/css/ui-equipment.css
@@ -111,7 +111,6 @@
 	float:left;
 	padding-left: 5px;
 	background: rgba(0,0,0,0.6);
-	visibility: hidden;
 	margin-right: -9000px;
 }
 
